-- CORE.ADDRESS definition

-- Drop table

-- DROP TABLE CORE.ADDRESS;

CREATE TABLE CORE.ADDRESS (
    ADDRESS_NI NUMBER(38,0) NOT NULL,
    PATIENT_NI NUMBER(38,0) NOT NULL,
    CURRENT BOOLEAN,
    ZIP_CODE CHAR(5) NULL,
    CITY VARCHAR2(100) NULL,
    COUNTRY VARCHAR2(50) NULL,
    ADDRESS VARCHAR2(1000) NULL,
    LATITUDE NUMBER NULL,
    LONGITUDE NUMBER NULL,
    CONSTRAINT PK_ADDRESS PRIMARY KEY (ADDRESS_NI),
    CONSTRAINT SYS_C00109600 CHECK ("PATIENT_NI" IS NOT NULL),
    CONSTRAINT FK1_PATIENT FOREIGN KEY (PATIENT_NI) REFERENCES CORE.PATIENT(PATIENT_NI)
);
CREATE UNIQUE INDEX PK_ADDRESS ON CORE.ADDRESS (ADDRESS_NI);