-- CORE.CLINICAL definition

-- Drop table

-- DROP TABLE CORE.CLINICAL;

CREATE TABLE CORE.CLINICAL (
     CLINICAL_NI NUMBER(38,0) NOT NULL,
     PATIENT_NI NUMBER(38,0) NOT NULL,
     SEJOUR_NI NUMBER(38,0) NOT NULL,
     CONSTRAINT PK_CLINICAL PRIMARY KEY (CLINICAL_NI),
     CONSTRAINT SYS_C00109590 CHECK ("CLINICAL_NI" IS NOT NULL),
     CONSTRAINT FK1_MEDICATION_PRE FOREIGN KEY (PATIENT_NI) REFERENCES CORE.PATIENT(PATIENT_NI),
     CONSTRAINT FK2_MEDICATION_PRE FOREIGN KEY (SEJOUR_NI) REFERENCES CORE.SEJOUR(SEJOUR_NI)
);
CREATE UNIQUE INDEX PK_CLINICAL ON CORE.CLINICAL (CLINICAL_NI);