-- CORE.DIAG definition

-- Drop table

-- DROP TABLE CORE.DIAG;

CREATE TABLE CORE.DIAG (
     DIAG_NI NUMBER(38,0) NOT NULL,
     PATIENT_NI NUMBER(38,0) NOT NULL,
     SEJOUR_NI NUMBER(38,0) NOT NULL,
     CODE VARCHAR2(10) NOT NULL,
     CODE_TYPE VARCHAR2(3),
     CONSTRAINT PK_DIAG PRIMARY KEY (DIAG_NI),
     CONSTRAINT SYS_C00109610 CHECK ("DIAG_NI" IS NOT NULL),
     CONSTRAINT FK1_PATIENT FOREIGN KEY (PATIENT_NI) REFERENCES CORE.PATIENT(PATIENT_NI),
     CONSTRAINT FK2_SEJOUR FOREIGN KEY (SEJOUR_NI) REFERENCES CORE.SEJOUR(SEJOUR_NI)
);
CREATE UNIQUE INDEX PK_DIAG ON CORE.DIAG (DIAG_NI);