-- CORE.MEDICATION_ADM definition

-- Drop table

-- DROP TABLE CORE.MEDICATION_ADM;

CREATE TABLE CORE.MEDICATION_ADM (
     MEDICATION_ADM_NI NUMBER(38,0) NOT NULL,
     PATIENT_NI NUMBER(38,0) NOT NULL,
     SEJOUR_NI NUMBER(38,0) NOT NULL,
     CONSTRAINT PK_BIOLOGY PRIMARY KEY (MEDICATION_ADM_NI),
     CONSTRAINT SYS_C00109590 CHECK ("MEDICATION_ADM_NI" IS NOT NULL),
     CONSTRAINT FK1_MEDICATION_PRE FOREIGN KEY (PATIENT_NI) REFERENCES CORE.PATIENT(PATIENT_NI),
     CONSTRAINT FK2_MEDICATION_PRE FOREIGN KEY (SEJOUR_NI) REFERENCES CORE.SEJOUR(SEJOUR_NI)
);
CREATE UNIQUE INDEX PK_MEDICATION_ADM ON CORE.MEDICATION_ADM (MEDICATION_ADM_NI);