-- CORE.MEDICATION_PRE definition

-- Drop table

-- DROP TABLE CORE.MEDICATION_PRE;

CREATE TABLE CORE.MEDICATION_PRE (
    MEDICATION_PRE_NI NUMBER(38,0) NOT NULL,
    PATIENT_NI NUMBER(38,0) NOT NULL,
    SEJOUR_NI NUMBER(38,0) NOT NULL,
    CONSTRAINT PK_BIOLOGY PRIMARY KEY (MEDICATION_PRE_NI),
    CONSTRAINT SYS_C00109590 CHECK ("MEDICATION_PRE_NI" IS NOT NULL),
    CONSTRAINT FK1_MEDICATION_PRE FOREIGN KEY (PATIENT_NI) REFERENCES CORE.PATIENT(PATIENT_NI),
    CONSTRAINT FK2_MEDICATION_PRE FOREIGN KEY (SEJOUR_NI) REFERENCES CORE.SEJOUR(SEJOUR_NI)
);
CREATE UNIQUE INDEX PK_MEDICATION_PRE ON CORE.MEDICATION_PRE (MEDICATION_PRE_NI);