-- CORE.MOUV definition

-- Drop table

-- DROP TABLE CORE.MOUV;

CREATE TABLE CORE.MOUV (
    MOUV_NI NUMBER(38,0) NOT NULL,
    PATIENT_NI NUMBER(38,0) NOT NULL,
    SEJOUR_NI NUMBER(38,0) NOT NULL,
    MOUV_TYPE VARCHAR2(50) NOT NULL,
    DATE_CREAT DATE NOT NULL,
    DATE_MODIF DATE NOT NULL,
    DATE_REMOVE DATE NULL,
    MOUV_START DATE NULL,
    MOUV_END DATE NULL,
    CONSTRAINT PK_MOUV PRIMARY KEY (MOUV_NI),
    CONSTRAINT SYS_C00109690 CHECK ("MOUV_NI" IS NOT NULL),
    CONSTRAINT SYS_C00109691 CHECK ("MOUV_TYPE" IS NOT NULL),
    CONSTRAINT FK1_MOUV FOREIGN KEY (PATIENT_NI) REFERENCES CORE.PATIENT(PATIENT_NI),
    CONSTRAINT FK2_MOUV FOREIGN KEY (SEJOUR_NI) REFERENCES CORE.SEJOUR(SEJOUR_NI)
);
CREATE UNIQUE INDEX PK_MOUV ON CORE.MOUV (MOUV_NI);