-- ========================================================================
-- PostgreSQL 17.x DDL Script for FHIR Questionnaire Core Variables EDSH
-- Generated from: input/resources/usages/core/Questionnaire-UsageCore.json
-- 
-- This script creates an optimized schema for storing FHIR Questionnaire
-- responses related to core health data variables for EDSH.
-- 
-- Key optimizations:
-- - Consolidated laboratory results into single generic table
-- - Removed age columns (calculable from birth date and encounter date)  
-- - Consolidated patient information into single table
-- - All clinical tables linked to central PMSI encounter table
-- ========================================================================

-- Drop tables in reverse dependency order
DROP TABLE IF EXISTS style_vie CASCADE;
DROP TABLE IF EXISTS posologie CASCADE;
DROP TABLE IF EXISTS dosage CASCADE;
DROP TABLE IF EXISTS dossier_soins CASCADE;
DROP TABLE IF EXISTS exposition_medicamenteuse CASCADE;
DROP TABLE IF EXISTS biologie CASCADE;
DROP TABLE IF EXISTS actes CASCADE;
DROP TABLE IF EXISTS diagnostics CASCADE;
DROP TABLE IF EXISTS donnees_pmsi CASCADE;
DROP TABLE IF EXISTS patient CASCADE;

-- ========================================================================
-- MAIN TABLES
-- ========================================================================

-- Table: patient
-- Consolidated patient information combining identity and geocoding data
-- Based on linkId: 2958000860428 (Identité patient) and 5491974639955 (Géocodage)
-- Includes sexe from linkId: 3894630481120 (consolidated from PMSI data)
CREATE TABLE patient (
    patient_id BIGSERIAL PRIMARY KEY,
    
    -- Identity fields (linkId: 2958000860428)
    nom VARCHAR(255),
    prenom VARCHAR(255),
    nir VARCHAR(15),
    ins VARCHAR(50),
    date_naissance DATE NOT NULL,
    sexe VARCHAR(20),
    date_deces DATE,
    source_deces VARCHAR(50),
    rang_gemellaire INTEGER,
    
    -- Geocoding fields (linkId: 3816475533472)
    latitude DECIMAL(10,7),
    longitude DECIMAL(10,7),
    code_iris VARCHAR(20),
    libelle_iris VARCHAR(200),
    
    -- Geographic residence
    code_geographique_residence VARCHAR(10),
    libelle_geographique_residence VARCHAR(200),
    
    -- Audit fields
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP
);

-- Table: donnees_pmsi  
-- Main encounter/stay data - central table linking to all other clinical data
-- Based on linkId: 2825244231605 (Données PMSI) - repeats=true
-- Note: age column removed per optimization requirements
CREATE TABLE donnees_pmsi (
    pmsi_id BIGSERIAL PRIMARY KEY,
    patient_id BIGINT NOT NULL,
    
    -- Core PMSI fields (age removed - calculated from patient.date_naissance)
    mode_sortie VARCHAR(100),
    duree_sejour INTEGER,
    
    -- Stay dates and administrative data
    date_debut_sejour DATE,
    date_fin_sejour DATE,
    mode_entree VARCHAR(100),
    statut_administratif VARCHAR(50),
    
    -- Healthcare facility information
    etablissement VARCHAR(255),
    unite_fonctionnelle VARCHAR(255),
    service VARCHAR(255),
    
    -- Geographic context at time of encounter (from linkId: 2446369196222)
    code_geographique_residence VARCHAR(10),
    libelle_geographique_residence VARCHAR(200),
    
    -- Link to data collection context
    date_recueil DATE,
    
    -- Audit fields
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP
);

-- Table: diagnostics
-- Diagnostic codes and information linked to PMSI encounters
CREATE TABLE diagnostics (
    diagnostic_id BIGSERIAL PRIMARY KEY,
    pmsi_id BIGINT NOT NULL,
    
    -- Diagnostic information (linkId: 9391816419630)
    code_diagnostic VARCHAR(20) NOT NULL,
    type_diagnostic VARCHAR(50),
    libelle_diagnostic TEXT,
    date_diagnostic DATE,
    
    -- Sequencing information for multiple diagnoses
    sequence_diagnostic INTEGER,
    
    -- Data collection context
    date_recueil DATE,
    
    -- Audit fields
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP
);

-- Table: actes
-- Medical procedures and acts linked to PMSI encounters  
CREATE TABLE actes (
    acte_id BIGSERIAL PRIMARY KEY,
    pmsi_id BIGINT NOT NULL,
    
    -- Act/procedure information (linkId: 591926901726)
    code_acte VARCHAR(20) NOT NULL,
    libelle_acte TEXT,
    date_acte TIMESTAMP,
    executant VARCHAR(255),
    
    -- Sequencing information for multiple acts
    sequence_acte INTEGER,
    
    -- Data collection context
    date_recueil DATE,
    
    -- Audit fields
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP
);

-- Table: biologie
-- Consolidated laboratory results table for all biological examinations
-- Optimized generic table using LOINC codes to differentiate test types
-- Combines: Fonction rénale, Bilan hépatique, Hémogramme, Biologie autres
CREATE TABLE biologie (
    biologie_id BIGSERIAL PRIMARY KEY,
    pmsi_id BIGINT NOT NULL,
    patient_id BIGINT NOT NULL,
    
    -- Test identification - consolidated biology table
    code_loinc VARCHAR(20),
    libelle_test VARCHAR(255),
    type_examen VARCHAR(100),
    
    -- Test results
    valeur DECIMAL(15,6),
    unite VARCHAR(50),
    valeur_texte TEXT,
    
    -- Test context and timing
    date_prelevement TIMESTAMP WITH TIME ZONE,
    statut_validation VARCHAR(50),
    
    -- Reference ranges
    borne_inf_normale DECIMAL(15,6),
    borne_sup_normale DECIMAL(15,6),
    
    -- Quality information
    commentaire TEXT,
    methode_analyse VARCHAR(255),
    laboratoire VARCHAR(255),
    
    -- Audit fields
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP
);

-- Table: exposition_medicamenteuse
-- Medication exposure data linked to encounters and patients
-- Based on linkId: 817801935685 (Exposition médicamenteuse) - repeats=true
CREATE TABLE exposition_medicamenteuse (
    exposition_id BIGSERIAL PRIMARY KEY,
    pmsi_id BIGINT NOT NULL,
    patient_id BIGINT NOT NULL,
    
    -- Medication identification (linkId: 817801935685)
    code_atc VARCHAR(20),
    denomination VARCHAR(255),
    forme_pharmaceutique VARCHAR(100),
    
    -- Administration details
    voie_administration VARCHAR(100),
    
    -- Prescription context
    type_prescription VARCHAR(50),
    prescripteur VARCHAR(255),
    
    -- Temporal information
    date_debut DATE,
    date_fin DATE,
    date_prescription DATE,
    
    -- Audit fields
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP
);

-- Table: dossier_soins  
-- Clinical care measurements and observations
-- Based on linkId: 305831246173 (Dossier de soins) - repeats=true
CREATE TABLE dossier_soins (
    soins_id BIGSERIAL PRIMARY KEY,
    pmsi_id BIGINT NOT NULL,
    patient_id BIGINT NOT NULL,
    
    -- Physical measurements (linkId: 305831246173)
    taille DECIMAL(5,2),
    date_mesure_taille DATE,
    
    poids DECIMAL(6,2),
    date_mesure_poids DATE,
    
    -- Vital signs
    pression_systolique DECIMAL(5,2),
    date_mesure_ps DATE,
    
    pression_diastolique DECIMAL(5,2),
    date_mesure_pd DATE,
    
    -- Measurement context
    type_mesure VARCHAR(100),
    unite_soins VARCHAR(255),
    professionnel VARCHAR(255),
    
    -- Additional clinical data
    commentaire TEXT,
    
    -- Audit fields
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP
);

-- Table: posologie
-- Detailed dosing information (linkId: 6348237104421)
CREATE TABLE posologie (
    posologie_id BIGSERIAL PRIMARY KEY,
    exposition_id BIGINT NOT NULL,
    pmsi_id BIGINT NOT NULL,
    patient_id BIGINT NOT NULL,
    
    -- Posology details
    date_debut_prescription DATE,
    date_fin_prescription DATE,
    nombre_prises_par_jour INTEGER,
    
    -- Audit fields
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP
);

-- Table: dosage 
-- Dosage details (linkId: 5720103839343)
CREATE TABLE dosage (
    dosage_id BIGSERIAL PRIMARY KEY,
    exposition_id BIGINT NOT NULL,
    pmsi_id BIGINT NOT NULL,
    patient_id BIGINT NOT NULL,
    
    -- Dosage information
    quantite_administree DECIMAL(10,3),
    unite_quantite VARCHAR(20),
    date_heure_debut TIMESTAMP,
    date_heure_fin TIMESTAMP,
    
    -- Audit fields
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP
);

-- Table: style_vie
-- Consolidated lifestyle information (linkId: 1693164086678)
CREATE TABLE style_vie (
    style_vie_id BIGSERIAL PRIMARY KEY,
    pmsi_id BIGINT NOT NULL,
    patient_id BIGINT NOT NULL,
    
    -- Lifestyle factors
    consommation_tabac VARCHAR(100),
    consommation_alcool VARCHAR(100),
    consommation_autres_drogues VARCHAR(100),
    activite_physique VARCHAR(100),
    
    -- Data collection context
    date_recueil DATE,
    
    -- Audit fields
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP
);

-- ========================================================================
-- CONSTRAINTS AND FOREIGN KEYS
-- ========================================================================

-- Foreign key constraints
ALTER TABLE donnees_pmsi 
ADD CONSTRAINT fk_donnees_pmsi_patient 
FOREIGN KEY (patient_id) REFERENCES patient(patient_id) ON DELETE CASCADE;

ALTER TABLE diagnostics 
ADD CONSTRAINT fk_diagnostics_pmsi 
FOREIGN KEY (pmsi_id) REFERENCES donnees_pmsi(pmsi_id) ON DELETE CASCADE;

ALTER TABLE actes 
ADD CONSTRAINT fk_actes_pmsi 
FOREIGN KEY (pmsi_id) REFERENCES donnees_pmsi(pmsi_id) ON DELETE CASCADE;

ALTER TABLE biologie 
ADD CONSTRAINT fk_biologie_pmsi 
FOREIGN KEY (pmsi_id) REFERENCES donnees_pmsi(pmsi_id) ON DELETE CASCADE;

ALTER TABLE biologie 
ADD CONSTRAINT fk_biologie_patient 
FOREIGN KEY (patient_id) REFERENCES patient(patient_id) ON DELETE CASCADE;

ALTER TABLE exposition_medicamenteuse 
ADD CONSTRAINT fk_exposition_pmsi 
FOREIGN KEY (pmsi_id) REFERENCES donnees_pmsi(pmsi_id) ON DELETE CASCADE;

ALTER TABLE exposition_medicamenteuse 
ADD CONSTRAINT fk_exposition_patient 
FOREIGN KEY (patient_id) REFERENCES patient(patient_id) ON DELETE CASCADE;

ALTER TABLE dossier_soins 
ADD CONSTRAINT fk_dossier_soins_pmsi 
FOREIGN KEY (pmsi_id) REFERENCES donnees_pmsi(pmsi_id) ON DELETE CASCADE;

ALTER TABLE dossier_soins 
ADD CONSTRAINT fk_dossier_soins_patient 
FOREIGN KEY (patient_id) REFERENCES patient(patient_id) ON DELETE CASCADE;

ALTER TABLE posologie 
ADD CONSTRAINT fk_posologie_exposition 
FOREIGN KEY (exposition_id) REFERENCES exposition_medicamenteuse(exposition_id) ON DELETE CASCADE;

ALTER TABLE posologie 
ADD CONSTRAINT fk_posologie_pmsi 
FOREIGN KEY (pmsi_id) REFERENCES donnees_pmsi(pmsi_id) ON DELETE CASCADE;

ALTER TABLE posologie 
ADD CONSTRAINT fk_posologie_patient 
FOREIGN KEY (patient_id) REFERENCES patient(patient_id) ON DELETE CASCADE;

ALTER TABLE dosage 
ADD CONSTRAINT fk_dosage_exposition 
FOREIGN KEY (exposition_id) REFERENCES exposition_medicamenteuse(exposition_id) ON DELETE CASCADE;

ALTER TABLE dosage 
ADD CONSTRAINT fk_dosage_pmsi 
FOREIGN KEY (pmsi_id) REFERENCES donnees_pmsi(pmsi_id) ON DELETE CASCADE;

ALTER TABLE dosage 
ADD CONSTRAINT fk_dosage_patient 
FOREIGN KEY (patient_id) REFERENCES patient(patient_id) ON DELETE CASCADE;

ALTER TABLE style_vie 
ADD CONSTRAINT fk_style_vie_pmsi 
FOREIGN KEY (pmsi_id) REFERENCES donnees_pmsi(pmsi_id) ON DELETE CASCADE;

ALTER TABLE style_vie 
ADD CONSTRAINT fk_style_vie_patient 
FOREIGN KEY (patient_id) REFERENCES patient(patient_id) ON DELETE CASCADE;

-- Check constraints for data quality
ALTER TABLE patient 
ADD CONSTRAINT chk_patient_sexe 
CHECK (sexe IN ('M', 'F', 'Masculin', 'Féminin', 'Indéterminé', '1', '2', '9'));

ALTER TABLE patient 
ADD CONSTRAINT chk_patient_date_naissance 
CHECK (date_naissance <= CURRENT_DATE);

ALTER TABLE patient
ADD CONSTRAINT chk_patient_latitude 
CHECK (latitude BETWEEN -90 AND 90);

ALTER TABLE patient
ADD CONSTRAINT chk_patient_longitude 
CHECK (longitude BETWEEN -180 AND 180);

ALTER TABLE donnees_pmsi 
ADD CONSTRAINT chk_pmsi_duree_sejour 
CHECK (duree_sejour >= 0);

ALTER TABLE donnees_pmsi 
ADD CONSTRAINT chk_pmsi_dates 
CHECK (date_fin_sejour >= date_debut_sejour);

ALTER TABLE donnees_pmsi 
ADD CONSTRAINT chk_pmsi_sexe 
CHECK (sexe IN ('M', 'F', '1', '2', '9'));

ALTER TABLE biologie 
ADD CONSTRAINT chk_biologie_bornes 
CHECK (borne_sup_normale IS NULL OR borne_inf_normale IS NULL OR borne_sup_normale >= borne_inf_normale);

ALTER TABLE biologie
ADD CONSTRAINT chk_biologie_type_examen
CHECK (type_examen IN ('fonction_renale', 'bilan_hepatique', 'hemogramme', 'autres', 'coagulation', 'metabolisme'));

ALTER TABLE exposition_medicamenteuse
ADD CONSTRAINT chk_exposition_dates
CHECK (date_fin IS NULL OR date_debut IS NULL OR date_fin >= date_debut);

ALTER TABLE exposition_medicamenteuse
ADD CONSTRAINT chk_exposition_type
CHECK (type_prescription IN ('prescrit', 'administré'));

ALTER TABLE exposition_medicamenteuse
ADD CONSTRAINT chk_exposition_duree
CHECK (duree_traitement IS NULL OR duree_traitement > 0);

ALTER TABLE dossier_soins 
ADD CONSTRAINT chk_soins_taille 
CHECK (taille IS NULL OR (taille > 0 AND taille < 300));

ALTER TABLE dossier_soins 
ADD CONSTRAINT chk_soins_poids 
CHECK (poids IS NULL OR (poids > 0 AND poids < 1000));

ALTER TABLE dossier_soins 
ADD CONSTRAINT chk_soins_pression_systolique 
CHECK (pression_systolique IS NULL OR (pression_systolique > 0 AND pression_systolique < 300));

ALTER TABLE dossier_soins 
ADD CONSTRAINT chk_soins_pression_diastolique 
CHECK (pression_diastolique IS NULL OR (pression_diastolique > 0 AND pression_diastolique < 200));

-- ========================================================================
-- INDEXES FOR PERFORMANCE OPTIMIZATION
-- ========================================================================

-- Primary lookup indexes on patient table
CREATE INDEX idx_patient_nir ON patient(nir) WHERE nir IS NOT NULL;
CREATE INDEX idx_patient_ins ON patient(ins) WHERE ins IS NOT NULL;
CREATE INDEX idx_patient_nom_prenom ON patient(nom, prenom);
CREATE INDEX idx_patient_date_naissance ON patient(date_naissance);
CREATE INDEX idx_patient_code_postal ON patient(code_postal);
CREATE INDEX idx_patient_commune ON patient(commune);

-- PMSI encounter indexes  
CREATE INDEX idx_pmsi_patient_id ON donnees_pmsi(patient_id);
CREATE INDEX idx_pmsi_date_debut ON donnees_pmsi(date_debut_sejour);
CREATE INDEX idx_pmsi_date_fin ON donnees_pmsi(date_fin_sejour);
CREATE INDEX idx_pmsi_etablissement ON donnees_pmsi(etablissement);
CREATE INDEX idx_pmsi_unite_fonctionnelle ON donnees_pmsi(unite_fonctionnelle);

-- Diagnostic indexes
CREATE INDEX idx_diagnostics_pmsi_id ON diagnostics(pmsi_id);
CREATE INDEX idx_diagnostics_code ON diagnostics(code_diagnostic);
CREATE INDEX idx_diagnostics_type ON diagnostics(type_diagnostic);
CREATE INDEX idx_diagnostics_date ON diagnostics(date_diagnostic);

-- Procedure/acts indexes
CREATE INDEX idx_actes_pmsi_id ON actes(pmsi_id);
CREATE INDEX idx_actes_code ON actes(code_acte);
CREATE INDEX idx_actes_date ON actes(date_acte);
CREATE INDEX idx_actes_date_recueil ON actes(date_recueil);

-- Laboratory results indexes - optimized for consolidated table
CREATE INDEX idx_biologie_pmsi_id ON biologie(pmsi_id);
CREATE INDEX idx_biologie_patient_id ON biologie(patient_id);
CREATE INDEX idx_biologie_code_loinc ON biologie(code_loinc);
CREATE INDEX idx_biologie_type_examen ON biologie(type_examen);
CREATE INDEX idx_biologie_date_prelevement ON biologie(date_prelevement);
CREATE INDEX idx_biologie_statut_validation ON biologie(statut_validation);

-- Medication exposure indexes
CREATE INDEX idx_exposition_pmsi_id ON exposition_medicamenteuse(pmsi_id);
CREATE INDEX idx_exposition_patient_id ON exposition_medicamenteuse(patient_id);
CREATE INDEX idx_exposition_code_atc ON exposition_medicamenteuse(code_atc);
CREATE INDEX idx_exposition_date_debut ON exposition_medicamenteuse(date_debut);
CREATE INDEX idx_exposition_date_prescription ON exposition_medicamenteuse(date_prescription);
CREATE INDEX idx_exposition_type_prescription ON exposition_medicamenteuse(type_prescription);

-- Clinical care indexes
CREATE INDEX idx_soins_pmsi_id ON dossier_soins(pmsi_id);
CREATE INDEX idx_soins_patient_id ON dossier_soins(patient_id);
CREATE INDEX idx_soins_date_mesure_taille ON dossier_soins(date_mesure_taille);
CREATE INDEX idx_soins_date_mesure_poids ON dossier_soins(date_mesure_poids);

-- Composite indexes for common queries
CREATE INDEX idx_biologie_patient_loinc ON biologie(patient_id, code_loinc);
CREATE INDEX idx_biologie_patient_type ON biologie(patient_id, type_examen);
CREATE INDEX idx_exposition_patient_atc ON exposition_medicamenteuse(patient_id, code_atc);
CREATE INDEX idx_pmsi_patient_date ON donnees_pmsi(patient_id, date_debut_sejour);
CREATE INDEX idx_diagnostics_pmsi_code ON diagnostics(pmsi_id, code_diagnostic);
CREATE INDEX idx_actes_pmsi_code ON actes(pmsi_id, code_acte);

-- Geographic/spatial indexes
CREATE INDEX idx_patient_coords ON patient(latitude, longitude) WHERE latitude IS NOT NULL AND longitude IS NOT NULL;
CREATE INDEX idx_patient_iris ON patient(code_iris) WHERE code_iris IS NOT NULL;

-- Partial indexes for performance
CREATE INDEX idx_biologie_valeur_non_null ON biologie(valeur) WHERE valeur IS NOT NULL;
CREATE INDEX idx_exposition_active ON exposition_medicamenteuse(patient_id, date_debut, date_fin) 
WHERE date_debut IS NOT NULL;

-- ========================================================================
-- COLUMN COMMENTS
-- ========================================================================

-- Patient table column comments
COMMENT ON COLUMN patient.nom IS 'Nom patient (linkId: 8605698058770)';
COMMENT ON COLUMN patient.prenom IS 'Prénom patient (linkId: 6214879623503)';
COMMENT ON COLUMN patient.nir IS 'Numéro inscription au Répertoire - NIR (linkId: 5711960356160)';
COMMENT ON COLUMN patient.ins IS 'Identité Nationale de Santé - INS (linkId: 3764723550987)';
COMMENT ON COLUMN patient.date_naissance IS 'Date de naissance (linkId: 5036133558154)';
COMMENT ON COLUMN patient.sexe IS 'Sexe consolidé depuis PMSI (linkId: 3894630481120)';
COMMENT ON COLUMN patient.date_deces IS 'Date de décès (linkId: 5633552097315)';
COMMENT ON COLUMN patient.source_deces IS 'Source de la date de décès (linkId: 9098810065693)';
COMMENT ON COLUMN patient.rang_gemellaire IS 'Rang gémellaire du bénéficiaire (linkId: 6931296968515)';
COMMENT ON COLUMN patient.latitude IS 'Latitude du domicile patient (linkId: 3709843054556)';
COMMENT ON COLUMN patient.longitude IS 'Longitude du domicile patient (linkId: 7651448032665)';

-- Biology table column comments
COMMENT ON COLUMN biologie.code_loinc IS 'Code LOINC identifiant le test biologique';
COMMENT ON COLUMN biologie.type_examen IS 'Type examen: fonction_renale, bilan_hepatique, hemogramme, autres';
COMMENT ON COLUMN biologie.date_prelevement IS 'Date et heure du prélèvement';
COMMENT ON COLUMN biologie.borne_inf_normale IS 'Borne inférieure de normalité';
COMMENT ON COLUMN biologie.borne_sup_normale IS 'Borne supérieure de normalité';

-- ========================================================================
-- COMMENTS ON TABLES
-- ========================================================================

COMMENT ON TABLE patient IS 'Consolidated patient demographics and identity information combining FHIR Questionnaire items for patient identity and geocoding (linkId: 2958000860428, 3816475533472)';

COMMENT ON TABLE donnees_pmsi IS 'Main healthcare encounter data from PMSI (Programme de médicalisation des systèmes information) - central linking table for all clinical data (linkId: 2825244231605)';

COMMENT ON TABLE diagnostics IS 'Diagnostic codes and information linked to healthcare encounters using ICD-10/CIM-10 classifications (linkId: 9391816419630)';

COMMENT ON TABLE actes IS 'Medical procedures and acts performed during healthcare encounters using CCAM and other standard classifications (linkId: 591926901726)';

COMMENT ON TABLE biologie IS 'Consolidated laboratory test results for all biological examinations, differentiated by LOINC codes and test types including renal function, hepatic panel, complete blood count, and other tests (linkId: 7702944131447)';

COMMENT ON TABLE exposition_medicamenteuse IS 'Medication exposure and prescription data with ATC coding for pharmacovigilance and clinical research, supporting both prescribed and administered medications (linkId: 817801935685)';

COMMENT ON TABLE dossier_soins IS 'Clinical care measurements and observations including vital signs, physical measurements, and nursing care data (linkId: 305831246173)';

COMMENT ON TABLE posologie IS 'Detailed dosing information for medications (linkId: 6348237104421)';

COMMENT ON TABLE dosage IS 'Specific dosage administration details (linkId: 5720103839343)';

COMMENT ON TABLE style_vie IS 'Consolidated lifestyle information including tobacco, alcohol, drugs, and physical activity (linkId: 1693164086678)';

-- ========================================================================
-- SCHEMA CREATION COMPLETED
-- 
-- This optimized schema provides:
-- 1. Consolidated laboratory results in single biologie table using LOINC codes
-- 2. Age calculation capability from date_naissance and encounter dates
-- 3. Single patient table with consolidated demographics and geographic data
-- 4. All clinical tables properly linked via foreign keys to PMSI and patient tables
-- 5. Comprehensive indexing strategy for optimal query performance
-- 6. Data quality constraints and validation rules
-- 7. Support for temporal queries and longitudinal analysis
-- ========================================================================