@startuml core-mpd

skinparam Shadowing 1.0
' avoid problems with angled crows feet
skinparam linetype ortho

scale max 1100 width

title
Périmètre initial de l'usage
end title

entity CORE.PATIENT {
  * {field} PATIENT_NI NUMBER (38, 0) NOT NULL
  * {field} VIP CHAR (1) NOT NULL
  * {field} NAME VARCHAR2 (50) NULL
  * {field} FIRST_NAME VARCHAR2 (50) NULL
  * {field} GENDER CHAR (1) NULL
  * {field} BIRTH_DATE DATE NULL
  * {field} NIR VARCHAR2 (13) NULL
}

entity CORE.ADDRESS {
  * {field} ADDRESS_NI NUMBER (38, 0) NOT NULL
  * {field} PATIENT_NI NUMBER (38, 0) NOT NULL
  * {field} CURRENT BOOLEAN NULL
  * {field} ZIP_CODE CHAR (5) NULL
  * {field} CITY VARCHAR2 (100) NULL
  * {field} COUNTRY VARCHAR2 (50) NULL
  * {field} ADDRESS VARCHAR2 (1000) NULL
  * {field} LATITUDE NUMBER  NULL
  * {field} LONGITUDE NUMBER NULL
}

entity CORE.SEJOUR {
  * {field} SEJOUR_NI NUMBER (38, 0) NOT NULL
  * {field} PATIENT_NI NUMBER (38, 0) NOT NULL
  * {field} SEJOUR_TYPE VARCHAR2 (50) NOT NULL
  * {field} NDA VARCHAR2 (50) NOT NULL
  * {field} DATE_CREAT DATE NOT NULL
  * {field} DATE_MODIF DATE NOT NULL
  * {field} DATE_REMOVE DATE NULL
  * {field} SEJOUR_START DATE NULL
  * {field} SEJOUR_END DATE NULL
  * {field} MODE_IN VARCHAR2 (1) NULL
  * {field} MODE_OUT VARCHAR2 (1) NULL
}

entity CORE.MOUV {
  * {field} MOUV_NI NUMBER (38, 0) NOT NULL
  * {field} PATIENT_NI NUMBER (38, 0) NOT NULL
  * {field} SEJOUR_NI NUMBER (38, 0) NOT NULL
  * {field} MOUV_TYPE VARCHAR2 (50) NOT NULL
  * {field} DATE_CREAT DATE NOT NULL
  * {field} DATE_MODIF DATE NOT NULL
  * {field} DATE_REMOVE DATE NULL
  * {field} MOUV_START DATE NULL
  * {field} MOUV_END DATE NULL
}

entity CORE.BIOLOGY {
  * {field} BIOLOGY_NI NUMBER (38, 0) NOT NULL
  * {field} PATIENT_NI NUMBER (38, 0) NOT NULL
  * {field} SEJOUR_NI NUMBER (38, 0) NOT NULL
  * {field} DATE_CREAT DATE NOT NULL
  * {field} DATE_MODIF DATE NOT NULL
  * {field} DATE_REMOVE DATE NULL
  * {field} BIOLOGY_DATE_PREL DATE NULL
  * {field} BIOLOGY_DATE_ENR DATE NULL
  * {field} BIOLOGY_DATE_VAL_TECH DATE NULL
  * {field} BIOLOGY_DATE_VAL_BIOL DATE NULL
  * {field} BIOLOGY_CODE VARCHAR2 (50) NULL
  * {field} BIOLOGY_VALUE NUMBER (4, 2) NULL
  * {field} BIOLOGY_UNIT VARCHAR2 (10) NULL
}

entity CORE.ACTE {
  * {field} ACTE_NI NUMBER (38, 0) NOT NULL
  * {field} PATIENT_NI NUMBER (38, 0) NOT NULL
  * {field} SEJOUR_NI NUMBER (38, 0) NOT NULL
  * {field} CODE VARCHAR2 (13) NOT NULL
  * {field} DATE_START DATETIME NULL
  * {field} DATE_END DATETIME NULL
}

entity CORE.DIAG {
  * {field} DIAG_NI NUMBER (38, 0) NOT NULL
  * {field} PATIENT_NI NUMBER (38, 0) NOT NULL
  * {field} SEJOUR_NI NUMBER (38, 0) NOT NULL
  * {field} CODE VARCHAR2 (10) NOT NULL
  * {field} CODE_TYPE VARCHAR2 (3) NULL
}

entity CORE.MEDICATION_ADM {
  * {field} MEDICATION_ADM_NI NUMBER (38, 0) NOT NULL
  * {field} PATIENT_NI NUMBER (38, 0) NOT NULL
  * {field} SEJOUR_NI NUMBER (38, 0) NOT NULL
}

entity CORE.MEDICATION_PRE {
  * {field} MEDICATION_PRE_NI NUMBER (38, 0) NOT NULL
  * {field} PATIENT_NI NUMBER (38, 0) NOT NULL
  * {field} SEJOUR_NI NUMBER (38, 0) NOT NULL
}

entity CORE.CLINICAL {
  * {field} CLINICAL_NI NUMBER (38, 0) NOT NULL
  * {field} PATIENT_NI NUMBER (38, 0) NOT NULL
  * {field} SEJOUR_NI NUMBER (38, 0) NOT NULL
}


CORE.SEJOUR }o..o| CORE.PATIENT
CORE.ADDRESS }o..o| CORE.PATIENT

CORE.MOUV }o..o| CORE.PATIENT
CORE.MOUV }o..o| CORE.SEJOUR

CORE.BIOLOGY }o..o| CORE.PATIENT
CORE.BIOLOGY }o..o| CORE.SEJOUR

CORE.CLINICAL }o..o| CORE.PATIENT
CORE.CLINICAL }o..o| CORE.SEJOUR
CORE.ACTE }o..o| CORE.PATIENT
CORE.ACTE }o..o| CORE.SEJOUR
CORE.DIAG }o..o| CORE.PATIENT
CORE.DIAG }o..o| CORE.SEJOUR

CORE.MEDICATION_ADM }o..o| CORE.PATIENT
CORE.MEDICATION_ADM }o..o| CORE.SEJOUR

CORE.MEDICATION_PRE }o..o| CORE.PATIENT
CORE.MEDICATION_PRE }o..o| CORE.SEJOUR

@enduml
